--- a/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/login/forget_password.html
+++ b/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/login/forget_password.html
@@ -21,6 +21,10 @@
 				width: 38%;
 			}
 			
+			.mui-input-group input {
+				font-size: smaller;
+			}
+			
 			.mui-input-row label~input,
 			.mui-input-row label~select,
 			.mui-input-row label~textarea {
@@ -51,20 +55,24 @@
 				display: block;
 				padding: 12px;
 			}
+			.mui-icon-clear{
+				margin-top:-0.5em;
+			}
 		</style>
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<a class="mui-action-back mui-icon mui-icon-left-nav"></a>
-			<a class="lang" data-locale="back"></a>
+			<a class="mui-action-back mui-icon mui-icon-left-nav">
+				<a class="lang" data-locale="back"></a>
+			</a>
 			<h1 class="mui-title lang" data-locale="retrieve_password"></h1>
 		</header>
 		<div class="mui-content">
 			<span class="lang" data-locale="forget_password_msg"></span>
 			<form class="mui-input-group">
 				<div class="mui-input-row">
-					<label class="lang" data-locale="email"></label>
+					<label for="email" class="lang" data-locale="email" style="font-size: smaller;"></label>
 					<input id='email' type="email" class="mui-input-clear mui-input lang" data-locale="please-input-email">
 				</div>
 			</form>
@@ -85,7 +93,17 @@
 					var sendButton = doc.getElementById('sendMail');
 					var emailBox = doc.getElementById('email');
 					emailBox.value = plus.webview.currentWebview().email;
+					var reg = /^(\w-*\.*)+@(\w-?)+(\.\w{2,})+$/
+					
 					sendButton.addEventListener('tap', function() {
+						if(emailBox.value.trim()==""){
+							plus.nativeUI.toast(TextMessage.emailnull);
+							return;
+						}
+						if (!reg.test(emailBox.value)) {
+							plus.nativeUI.toast(TextMessage.email_error1);
+							return;
+						}
 						var waiting = plus.nativeUI.showWaiting();
 						var params = {
 							pwd_flg: "verification",
@@ -109,11 +127,13 @@
 							},
 							ng: function(data) {
 								waiting.close();
+								Api.callback_ng(data);
+								return false;
 								$.each(data, function(key, value) {
 									switch(value) {
 										case "1002":
 											if(key == Api.Params.email) {
-												mui.toast("E-Mail" + TextMessage.errorCode_1002, {
+												mui.toast(TextMessage.email_error1, {
 													duration: 'long',
 													type: 'div'
 												})
@@ -125,6 +145,18 @@
 								});
 								if(data == "2010") {
 									mui.toast(TextMessage.not_exist_email, {
+										duration: 'long',
+										type: 'div'
+									})
+								}
+								if(data == "1001") {
+									mui.toast(TextMessage.errorCode_1001, {
+										duration: 'long',
+										type: 'div'
+									})
+								}
+								if(data == "5001") {
+									mui.toast(TextMessage.emailsenderror, {
 										duration: 'long',
 										type: 'div'
 									})
