--- a/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/main/news.html
+++ b/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/main/news.html
@@ -27,7 +27,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		    <h1 class="mui-title">站内信一览</h1>
+		    <h1 class="mui-title lang" data-locale="messagetitle">站内信一览</h1>
 		</header>
 		<div id="pullrefresh" class="mui-content mui-scroll-wrapper">
   			<div class="mui-scroll">
@@ -49,9 +49,6 @@
 		<script src="../../js/sha256.js"></script>
 		<script src="../../js/common.js"></script>
 		<script type="text/javascript">
-			$(function(){
-				
-			});
 			var count = 0;
 			var page="";
 			var max=10;
@@ -59,16 +56,17 @@
 			    pullRefresh: 
 			    {
 			      container: '#pullrefresh',
-			      down: {
-			        callback: pullupRefresh
-			      },
 			      up: {
 			        contentrefresh: TextMessage.loading,
 			        contentnomore:TextMessage.nomore,
 			        contentinit: TextMessage.upmore,
 			        contentdown:TextMessage.upmore,
 			        callback: pullupRefresh
-			      }
+			      },
+			      down : {
+				      	contentrefresh: TextMessage.loading,
+					    callback :downRefresh 
+			    	}
 			    },
 			    beforeback: function() {
 			        var homePage = plus.webview.getWebviewById('pullrefresh_with_tab');
@@ -85,7 +83,6 @@
 				mui.confirm(TextMessage.delmessage, TextMessage.sharetitle, btnArray, function(e) {
 					if (e.index == 0) {
 						li.parentNode.removeChild(li);
-						console.log(li.getAttribute("id"));
 						var mid=li.getAttribute("id");
 						var parms3={
 							"msg_ids":mid,
@@ -96,13 +93,14 @@
 							console.log("delete success!");
 						},
 						ng: function(data) {
-							console.log(data);
+							/*console.log(data);
 							if(data=="1000"){
 								mui.toast(TextMessage.test, {
 									duration: 'long',
 									type: 'div'
 								})
-							}
+							}*/
+							Api.callback_ng(data);
 						},
 					});
 					} else {
@@ -116,6 +114,9 @@
 		  })(mui)
 			//show message
 			function showmessage(results){
+				if(results.data.message==""){
+					mui('#pullrefresh').pullRefresh().endPullupToRefresh(true);
+				}
 				var messarr=results.data.message;
 				page=results.data.page.page;
 				count=results.data.page.cnt;
@@ -137,52 +138,34 @@
 				page=page+1;
 				//$(".mui-pull-caption-down").hide();
 			}
-		  //load
-		  function pullupRefresh() 
-		  {
+		  //up
+		  function pullupRefresh(){
 		  	getmessage(page);
-			//get message
-			function getmessage(page){
-			  	mui.plusReady(function() {
-				  	var params2={};
-					if(max!=null){
-						params2.max=max;
-					}
-					if(page!=null){
-						params2.page=page;
-					}
-					Repository.User.get_message(params2, {
-						ok: function(data) {
-							console.log(data);
-							showmessage(data);
-						},
-						ng: function(data) {
-							console.log(data);
-							if(data=="1000"){
-								mui.toast(TextMessage.test, {
-									duration: 'long',
-									type: 'div'
-								})
-							}
-						},
-					});
+		  }   
+		  function downRefresh(){
+		  		mui('#pullrefresh').pullRefresh().endPulldownToRefresh();
+		  }
+		  //get message
+		function getmessage(page){
+		  	mui.plusReady(function() {
+			  	var params2={};
+				if(max!=null){
+					params2.max=max;
+				}
+				if(page!=null){
+					params2.page=page;
+				}
+				Repository.User.get_message(params2, {
+					ok: function(data) {
+						console.log(data);
+						showmessage(data);
+					},
+					ng: function(data) {
+						Api.callback_ng(data);
+					},
 				});
-			}
-			
-//		    setTimeout(function() {
-//		      mui('#pullrefresh').pullRefresh().endPullupToRefresh((++count > 2)); //参数为true代表没有更多数据了。
-//		      var table = document.body.querySelector('.messagelist');
-//		      var cells = document.body.querySelectorAll('.newsb');
-//		      
-//		      for (var i = cells.length, len = i + 5; i < len; i++) {
-//		        var div = document.createElement('div');
-//		        div.className = 'newsb';
-//		        div.innerHTML = '<div class="message">你有新的短消息，请查看请查看请查看请查看查看<div class="newsbox"> <img src="../../images/clear.png"  width="25" height="25"/></div></div><div class="lines"></div>';
-//		        table.appendChild(div);
-//		      }
-//		      
-//		    }, 1500);
-		  }    
+			});
+		}
 		 if (mui.os.plus) {
 		    mui.plusReady(function() {
 		      setTimeout(function() {
@@ -203,13 +186,14 @@
 				console.log(data);
 			},
 			ng: function(data) {
-				console.log(data);
+				/*console.log(data);
 				if(data=="1000"){
 					mui.toast(TextMessage.test, {
 						duration: 'long',
 						type: 'div'
 					})
-				}
+				}*/
+				Api.callback_ng(data);
 			},
 		});
 		//getmessage("1");
