--- a/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/main/products/pro_commentslist.html
+++ b/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/main/products/pro_commentslist.html
@@ -8,28 +8,55 @@
 		<link href="../../../css/mui.min.css" rel="stylesheet" />
 		<link rel="stylesheet" type="text/css" href="../../../css/icons-extra.css" />
 		<link rel="stylesheet" href="../../../css/kankan_home.css" />
+		<style>
+			.wrapper{
+		        position:absolute;
+		       top:1px;
+		        left:0px;
+		        right:0px;
+		        bottom:0px;
+		        overflow:auto;
+		        -webkit-overflow-scrolling : touch;
+		    }
+		    .input-bottom{
+		        position:fixed;
+		        bottom:0px;
+		        left:0px;
+		        width:100%;
+		        border-top:1px solid #ccc;
+		        background-color:#fff;
+		        z-index:1;
+		    }
+		     .input-top{
+		        position:fixed;
+		        top:0px;
+		        left:0px;
+		        width:100%;
+		        z-index:1;
+		    }
+		</style>
 	</head>
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-icon-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title lang" data-locale="det_procoment"></h1>
 		</header>
-		<div class="mui-content ka_mainbox">
+		<div class="mui-content ka_mainbox wrapper" >
 			<ul class="mui-table-view">
 				<li class="mui-table-view-cell ka_userbox" id="comments">
 				</li>
 			</ul>
 		</div>
-			<nav class="mui-bar mui-bar-tab">
-				<form id="commodity_comments" name="commodity_comments" method="post">
-					<div class="ka_sendmesbox ka_userbox">
-						<input  type="hidden" id="commodity_id" name="commodity_id" />
-						<textarea type="text" class="ka_sendcontent" maxlength="300"  rows="1" id="leave_msg_detail" name="leave_msg_detail" ></textarea>
-						<button type="button" class="mui-btn ka_sendbutton lang"  data-locale="contentsend" onclick="formSubmit()"></button>
-					</div>
-				</form>
-			</nav>
-
+		<div class="input-bottom">
+			<form id="commodity_comments" name="commodity_comments" method="post">
+				<div class="ka_sendmesbox ka_userbox">
+					<input  type="hidden" id="commodity_id" name="commodity_id"/>
+					<textarea type="text" class="ka_sendcontent" maxlength="300"  rows="1" id="leave_msg_detail" name="leave_msg_detail"></textarea>
+					<button type="button" class="mui-btn ka_sendbutton lang"  data-locale="contentsend" onclick="formSubmit()"></button>
+				</div>
+			</form>
+		</div>
+		
 		<script src="../../../js/mui.min.js"></script>
 		<script src="../../../js/jquery-3.2.0.min.js"></script>
 		<script src="../../../js/language.js"></script>
@@ -67,7 +94,7 @@
 					ng: function(data) {
 						Log.d(data);
 						if(data == "2001") {
-							var htmlnull='<p id="null" >'+TextMessage.datanull+'</p>';
+							var htmlnull='<p id="null" >'+TextMessage.commentsnull+'</p>';
 							$("#comments").html(htmlnull);
 						}
 					}
@@ -104,12 +131,18 @@
 			function formSubmit(){
 				var contents=document.commodity_comments.leave_msg_detail.value;
 				if(contents==""){
-					alert(TextMessage.commenttestnull);
+					mui.toast(TextMessage.commenttestnull, {
+						duration: 'long',
+						type: 'div'
+					});
 					document.commodity_comments.leave_msg_detail.focus();
 					return false;
 				}
 				if(contents.length>300){
-					alert(TextMessage.commenttestlength);
+					mui.toast(TextMessage.commenttestlength, {
+						duration: 'long',
+						type: 'div'
+					});
 					document.commodity_comments.leave_msg_detail.focus();
 					return false;
 				}
@@ -132,12 +165,22 @@
 							mui.toast(TextMessage.test, {
 								duration: 'long',
 								type: 'div'
-							})
+							});
+							mui.openWindow({
+								id: 'login',
+								url:"../../login/login.html"
+							});
 						}
-						mui.openWindow({
-							id: 'login',
-							url:"../../login/login.html"
-						});
+						if(data == "3020") {
+							mui.toast(TextMessage.input_email, {
+								duration: 'long',
+								type: 'div'
+							});
+							mui.openWindow({
+								id: 'emai_summate',
+								url:"../../login/emai_summate.html"
+							});
+						}
 					}
 				});
 			}
