--- a/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/main/products/requestlist.html
+++ b/android_kankan/app/src/main/assets/apps/H5B7054BD/www/pages/main/products/requestlist.html
@@ -25,13 +25,13 @@
 		<script src="../../../js/sha256.js"></script>
 		<script src="../../../js/common.js"></script>
 		<script type="text/javascript">
-			mui.init({
+			mui.init(/*{
 				swipeBack: false,
 				preloadPages: [{
 						id:"transaction",
 						url:"../../transaction/transaction2.html"
 				}]
-			});
+			}*/);
 			function showhistory(results){
 				var data=results.data;
 				var datalen=data.length;
@@ -41,32 +41,38 @@
 					var trans_id=trans.trans_id;
 					var trstatus=trans.status;
 					if(trstatus=="3"){
-						var status="交易成功";
+						var status="取引が成功する";
+						var status = TextMessage.transSuccess;
+					}else if(trstatus=="8"){
+						//var status="中止を請求する";
+						var status = TextMessage.requestStop;
 					}else{
-						var status="交易中止";
+						//var status="取引の中止";
+						var status = TextMessage.transStop;
 					}
 					if(trans[0].comm_img==""){
 						var comm_img ="../../../images/nopic.jpg";
 					}else{
 						var comm_img=trans[0].comm_img;
 					}
-					var comm_name=trans[0].comm_name;
+					var comm_name=HTMLDecode(trans[0].comm_name);
 					var html = new Util.StringBuilder();
 					html.appendFormat('<li class="mui-table-view-cell transli"><a class="mui-navigate-right" id="{0}"><div class="mui-pull-left"><img src="{1}" style="width: 60px;max-height: 60px;" onerror="this.src='+"'../../../images/nopic.jpg'"+'"></div>',trans_id,comm_img)
-						.appendFormat('<div class="mui-pull-left requestbox"><span>{0}</span><div><font color="#0062CC">{1}</font> P</div></div>',comm_name,price)
-						.appendFormat('<div class="mui-pull-right {0}">{1}</div></a></li>',trstatus=="3" ? "requestsuccess":"requeststop",status);
+						.appendFormat('<div class="mui-pull-left requestbox"><span>{0}</span><div><font color="#0062CC" style="display:none;">{1}P</font></div></div>',comm_name,price)
+						.appendFormat('<div class="mui-pull-right ka_userbox {0}">{1}</div></a></li>',trstatus=="3" ? "requestsuccess":"requeststop",status);
 					$("#historyshow").append(html.toString());
 					var translatepage=null;
 					mui('.transli').on('tap','a',function(e) {
 						var tid = this.getAttribute('id');
-						if(!translatepage) {
-							translatepage = plus.webview.getWebviewById('translatelist');
-						}
-						mui.fire(translatepage, 'traid', {
-							id: tid
-						});
+						var preView = plus.webview.getWebviewById('request');
+						plus.webview.close(preView);
 						mui.openWindow({
-							id: 'translatelist'
+							//id: 'transaction'
+							url: "../../transaction/transevaluate.html?transid=" + trans_id,
+						id: "transevaluate",
+						extras: {
+							"transid": tid
+						}
 						});
 					});
 				}
