--- a/kankan/pages/transaction/change_item.html
+++ b/kankan/pages/transaction/change_item.html
@@ -11,12 +11,10 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<button type="button" class="mui-left mui-action-back mui-btn  mui-btn-link mui-btn-nav mui-pull-left">
-					<span class="mui-icon mui-icon-left-nav"><font size="4" class="lang" data-locale="back"></font></span>
-				</button>
-			<h1 class="mui-center mui-title user-title-center maintitle">商品リスト</h1>
-			<div onclick="select_goods();" class="mui-right mui-pull-right  user-title-center" style="margin-top:13px;">
-				確定
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"><font size="3" class="lang" data-locale="back"></font></a>
+			<h1 class="mui-title lang" data-locale="commodity_select"></h1>
+			<div onclick="select_goods();">
+				<a class="mui-icon mui-icon  mui-icon-right-nav mui-pull-right jiaoyihitext"><span style="font-size: 14px;" class="lang" data-locale="register"></span></a>
 			</div>
 		</header>
 		<div class="mui-content" style="padding-top:30px;">
