--- a/kankan/pages/transaction/select_item.html
+++ b/kankan/pages/transaction/select_item.html
@@ -11,13 +11,13 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-			<button type="button" class="mui-left mui-action-back mui-btn  mui-btn-link mui-btn-nav mui-pull-left">
-					<span class="mui-icon mui-icon-left-nav"><font size="4" class="lang" data-locale="back"></font></span>
-				</button>
-			<h1 class="mui-center mui-title user-title-center maintitle">商品リスト</h1>
-			<div onclick="select_goods();" class="mui-right mui-pull-right  user-title-center" style="margin-top:13px;">
-				確定
+			<header class="mui-bar mui-bar-nav">
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"><font size="3" class="lang" data-locale="back"></font></a>
+			<h1 class="mui-title lang" data-locale="commodity_select"></h1>
+			<div onclick="select_goods();">
+				<a class="mui-icon mui-icon  mui-icon-right-nav mui-pull-right jiaoyihitext"><span style="font-size: 14px;" class="lang" data-locale="register"></span></a>
 			</div>
+		</header>
 		</header>
 		<div class="mui-content" style="padding-top:30px;">
 			<ul class="mui-table-view mui-grid-view goods-list" style="padding-top:10px;">
@@ -64,15 +64,18 @@
 					'mode': mode,
 					'choice': choice
 				}
-				params.choice = choice;
+				//alert(params.choice);
 				transRequest(params, 'second');
 			}
 
 			function transRequest(params, flag) {
 				Repository.Transaction.transRequest(params, {
 					ok: function(data) {
-						if(data.data.data.length < 1) {
-							alert(TextMessage.commdNo);
+						if(data.data.data == '') {
+							mui.toast(TextMessage.commdNo, {
+								duration: 'long',
+								type: 'div'
+							});
 							return false;
 						};
 						if(flag == 'first') {
