--- a/kankan/pages/main/user/user.html
+++ b/kankan/pages/main/user/user.html
@@ -272,7 +272,7 @@
 									    <input name="userlanageval" type="checkbox" value="3">
 									</div>
 				    	     </div>
-								<button type="button" class="mui-btn mui-btn-red ka_usersubmitbtn lang" data-locale="commodity_buttonsure" onclick="userinfosubmit()"></button>
+								<button type="button" class="mui-btn mui-btn-red ka_usersubmitbtn lang" data-locale="user_buttonsure" onclick="userinfosubmit()"></button>
 						</div>
 						</form>
 						
@@ -747,7 +747,7 @@
 					//}
 				},
 				ng: function(data) {
-					if(data == "2002" || data == "1000") {
+					if(data == "2002") {
 						mui.toast(TextMessage.test, {
 							duration: 'long',
 							type: 'div'
