--- a/kankan/pages/setting/question.html
+++ b/kankan/pages/setting/question.html
@@ -20,7 +20,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="margin-bottom: 2em;">
-				<!--<font class="lang" data-locale="back" size="3"></font>-->
+				<font class="lang" data-locale="back" size="4"></font>
 			</a>
 			<h1 class="mui-center mui-title lang" data-locale="Appeal"></h1>
 		</header>
