--- a/kankan/pages/transaction/transaction2.html
+++ b/kankan/pages/transaction/transaction2.html
@@ -12,6 +12,7 @@
 			html,
 			body {
 				background-color: #efeff4;
+				text-align: center;
 			}
 		</style>
 		<link rel="stylesheet" type="text/css" href="../../css/feedback.css" />
@@ -89,8 +90,8 @@
 						<ul class="tran-distribution">
 							<li class="tran-distribution-law logisticli">
 								<div class="tran-distribution-law-detail">
-									<a href="#tradeLaw">
-										<font size="3" class="lang" color="999999" data-locale="trans_criterion" vertical-align="middle"></font>
+									<a href="../setting/specialbus.html">
+										<font size="2" class="lang" color="999999" data-locale="trans_criterion" vertical-align="middle"></font>
 									</a>
 								</div>
 								<a href="../main/logisticslist2.html" class="logistica">
