忘记密码页面改修

--- a/kankan/pages/login/forget_password.html
+++ b/kankan/pages/login/forget_password.html
@@ -123,6 +123,7 @@
 											email: emailBox.value.trim()
 										}
 									});
+									doc.getElementById('email').value="";
 								}, 500);
 							},
 							ng: function(data) {
