--- a/kankan/pages/login/update_password.html
+++ b/kankan/pages/login/update_password.html
@@ -120,6 +120,8 @@
 											autoShow: false
 										}
 									});
+									doc.getElementById('email').value="";
+									doc.getElementById('password').value="";
 								}, 500);
 							},
 							ng: function(data) {
