--- a/kankan/pages/main/home.html
+++ b/kankan/pages/main/home.html
@@ -215,12 +215,7 @@
 			mui.plusReady(function() {
 				var userPhoto = document.getElementById("user");
 				var searchBtn = $('.mui-icon-search').first();
-				var _offset = 0;
-				var currentIndex = 0;
-				var lastIndex = 0;
-				var isLeft = true;
 				var curScroll = 0;
-				var isOnTap = false;
 				var group = new webviewGroup("home.html", {
 					items: [{
 						id: "tab-top-subpage-1",
@@ -283,45 +278,14 @@
 						var c = document.querySelector(".mui-control-item.mui-active");
 						if(c) {
 							c.classList.remove("mui-active");
-							currentIndex = $(c).index();
 						}
 						var activeTab = document.querySelector(".mui-scroll .mui-control-item:nth-child(" + (parseInt(obj.index) + 1) + ")");
 						localStorage.cid = activeTab.dataset.cid;
 						activeTab.classList.add("mui-active");
-						lastIndex = $(activeTab).index();
-						if(lastIndex > currentIndex) {
-							isLeft = true;
-						} else if(lastIndex < currentIndex) {
-							isLeft = false;
-						}
-						if(isLeft) {
-							var availWidth = window.screen.availWidth;
-							var lastOffset = document.querySelector(".mui-scroll").offsetWidth;
-							if(_offset + availWidth < lastOffset) {
-								_offset += c.offsetWidth;
-							}
-							if (isOnTap) {
-								mui('.mui-scroll-wrapper').scroll().scrollTo(curScroll, 0);
-								isOnTap = false;
-							} else {
-								mui('.mui-scroll-wrapper').scroll().scrollTo(-_offset, 0);
-							}
-						} else {
-							_offset -= c.offsetWidth;
-							if(_offset < 0) {
-								_offset = 0;
-							}
-							if (isOnTap) {
-								mui('.mui-scroll-wrapper').scroll().scrollTo(curScroll, 0);
-								isOnTap = false;
-							} else {
-								mui('.mui-scroll-wrapper').scroll().scrollTo(-_offset, 0);
-							}
-						}
+						mui('.mui-scroll-wrapper').scroll().scrollTo(-activeTab.offsetLeft, 0);
 					}
 				});
 				mui(".mui-scroll").on("tap", ".mui-control-item", function(e) {
-					isOnTap = true;
 					var wid = this.getAttribute("data-wid");
 					group.switchTab(wid);
 				});
